test(cli): 更新测试代码以提高稳定性和兼容性
- 将 List.of() 替换为 Arrays.asList() 和 Collections.emptyList() 以确保参数传递一致性
- 添加新的模型类导入，包括 DreaminaGenerateSubmit、DreaminaQueryResult 和 DreaminaVersion
- 修复字符串空白检查逻辑，使用 trim().isEmpty() 替代 isBlank() 方法
- 明确指定变量类型，如将 var 替换为具体的 DreaminaVersion 和 DreaminaQueryResult 类型
- 修改 JSON 字符串格式化方式，从多行文本块改为字符串拼接格式
- 更新文件写入方法，使用 getBytes(StandardCharsets.UTF_8) 替代 writeString
- 优化字节流读取实现，使用 ByteArrayOutputStream 替代 readAllBytes
- 添加 DreaminaQueryVideo 模型类的导入以完善功能覆盖