@@ -197,7 +197,7 @@ class DreaminaCliRequestTest {
 
     private Path createTempFile(String fileName) throws IOException {
         Path file = tempDir.resolve(fileName);
-        Files.writeString(file, "demo");
+        Files.write(file, "demo".getBytes(java.nio.charset.StandardCharsets.UTF_8));
         return file;
     }
 }
